// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Default
  </span>
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`Storyshots Button Google 1`] = `
<button
  className="ant-btn google-0-2-3 ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="google"
    className="anticon anticon-google"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="google"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
      />
    </svg>
  </span>
  <span>
    Sign in with Google
  </span>
</button>
`;

exports[`Storyshots Button Loading 1`] = `
<span
  className="container-0-2-1 container-d0-0-2-2"
>
   
</span>
`;

exports[`Storyshots Button Pending 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    style={
      Object {
        "paddingRight": 8,
      }
    }
  >
    <div
      className="ant-spin ant-spin-spinning"
    >
      <span
        aria-label="loading"
        className="anticon anticon-loading ant-spin-dot"
        role="img"
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        <svg
          aria-hidden="true"
          className="anticon-spin"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
  </span>
  <span>
    Pending
  </span>
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Primary Disabled
  </span>
</button>
`;

exports[`Storyshots Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="container-0-2-4"
  >
    <div>
      <div
        className="container-0-2-5 required-0-2-6"
      >
        First Name
      </div>
      <div
        className="container-0-2-7 container-d0-0-2-10"
      >
        <input
          className="ant-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          type="text"
          value="First Name"
        />
      </div>
    </div>
    <div>
      <div
        className="container-0-2-5"
      >
        Last Name
      </div>
      <div
        className="container-0-2-7 container-d1-0-2-11"
      >
        <input
          className="ant-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      className="ant-btn ant-btn-default"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span>
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Icon Custom 1`] = `
<img
  alt="https://dummyimage.com/600x400/000/fff&text=Dassana"
  height={64}
  src="https://dummyimage.com/600x400/000/fff&text=Dassana"
/>
`;

exports[`Storyshots Icon Predefined 1`] = `
<img
  alt="dassana-orange"
  height={64}
  src="dassana-orange.png"
/>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="container-0-2-7 container-d2-0-2-12"
>
  <input
    className="ant-input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Error 1`] = `
<div
  className="container-0-2-7 container-d6-0-2-17"
>
  <input
    className="ant-input error-0-2-8"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Full Width 1`] = `
<div
  className="container-0-2-7 container-d5-0-2-16"
>
  <input
    className="ant-input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Loading 1`] = `
<div
  className="container-0-2-7 container-d4-0-2-14"
>
  <div
    className="input-0-2-9"
  >
    <span
      className="container-0-2-1 container-d1-0-2-15"
    >
       
    </span>
  </div>
</div>
`;

exports[`Storyshots Link Click 1`] = `
<a
  className="ant-typography"
  onClick={[Function]}
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
  target="_self"
>
  <u>
    Click
  </u>
</a>
`;

exports[`Storyshots Link Href 1`] = `
<a
  className="ant-typography"
  href=" "
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
  target="_self"
>
  <u>
    Href
  </u>
</a>
`;

exports[`Storyshots Notifications Error 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Error
  </span>
</button>
`;

exports[`Storyshots Notifications Info 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Info
  </span>
</button>
`;

exports[`Storyshots Notifications Success 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Success
  </span>
</button>
`;

exports[`Storyshots Notifications Warning 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Warning
  </span>
</button>
`;

exports[`Storyshots Skeleton Circle 1`] = `
<span
  className="container-0-2-1 container-d3-0-2-19"
>
   
</span>
`;

exports[`Storyshots Skeleton Count 1`] = `
Array [
  <span
    className="container-0-2-1 container-d4-0-2-20"
  >
     
  </span>,
  <span
    className="container-0-2-1 container-d4-0-2-20"
  >
     
  </span>,
  <span
    className="container-0-2-1 container-d4-0-2-20"
  >
     
  </span>,
  <span
    className="container-0-2-1 container-d4-0-2-20"
  >
     
  </span>,
  <span
    className="container-0-2-1 container-d4-0-2-20"
  >
     
  </span>,
]
`;

exports[`Storyshots Skeleton Default 1`] = `
<span
  className="container-0-2-1 container-d2-0-2-18"
>
   
</span>
`;

exports[`Storyshots Table Default 1`] = `
<div
  className="ant-table-wrapper"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-table"
      >
        <div
          className="ant-table-container"
        >
          <div
            className="ant-table-content"
            onScroll={[Function]}
            style={Object {}}
          >
            <table
              style={
                Object {
                  "tableLayout": "auto",
                }
              }
            >
              <colgroup />
              <thead
                className="ant-table-thead"
              >
                <tr>
                  <th
                    className="ant-table-cell ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                    >
                      <span>
                        Name
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                    >
                      <span>
                        Age
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                    >
                      <span>
                        Label
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                    >
                      <span>
                        Linkedin
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    Toggle
                  </th>
                  <th
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    Icon
                  </th>
                </tr>
              </thead>
              <tbody
                className="ant-table-tbody"
              >
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key={0}
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    Dolor Sit
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    30
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <span
                      className="ant-tag ant-tag-magenta"
                      style={
                        Object {
                          "backgroundColor": undefined,
                        }
                      }
                    >
                      developer
                    </span>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="ant-typography"
                      href="/"
                      rel="noopener noreferrer"
                      style={
                        Object {
                          "WebkitLineClamp": null,
                        }
                      }
                      target="_blank"
                    >
                      <u>
                        /in/dolor-sit
                      </u>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <button
                      aria-checked={true}
                      className="ant-switch ant-switch-small ant-switch-checked"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="switch"
                      type="button"
                    >
                      <div
                        className="ant-switch-handle"
                      />
                      <span
                        className="ant-switch-inner"
                      />
                    </button>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <img
                      alt="dassana-blue"
                      height={32}
                      src="dassana-blue.png"
                    />
                  </td>
                </tr>
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key={1}
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    Lorem Ipsum
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    20
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <span
                      className="ant-tag ant-tag-blue"
                      style={
                        Object {
                          "backgroundColor": undefined,
                        }
                      }
                    >
                      CEO
                    </span>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="ant-typography"
                      href="/"
                      rel="noopener noreferrer"
                      style={
                        Object {
                          "WebkitLineClamp": null,
                        }
                      }
                      target="_blank"
                    >
                      <u>
                        /in/lorem-i
                      </u>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <button
                      aria-checked={false}
                      className="ant-switch ant-switch-small"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="switch"
                      type="button"
                    >
                      <div
                        className="ant-switch-handle"
                      />
                      <span
                        className="ant-switch-inner"
                      />
                    </button>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <img
                      alt="aws-logo"
                      height={32}
                      src="aws.svg"
                    />
                  </td>
                </tr>
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key={2}
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    Amet Consectetur
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    35
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <span
                      className="ant-tag ant-tag-green"
                      style={
                        Object {
                          "backgroundColor": undefined,
                        }
                      }
                    >
                      designer
                    </span>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="ant-typography"
                      href="/"
                      rel="noopener noreferrer"
                      style={
                        Object {
                          "WebkitLineClamp": null,
                        }
                      }
                      target="_blank"
                    >
                      <u>
                        /in/amet-c
                      </u>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <button
                      aria-checked={true}
                      className="ant-switch ant-switch-small ant-switch-checked ant-switch-disabled"
                      disabled={true}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="switch"
                      type="button"
                    >
                      <div
                        className="ant-switch-handle"
                      />
                      <span
                        className="ant-switch-inner"
                      />
                    </button>
                  </td>
                  <td
                    className="ant-table-cell"
                    colSpan={null}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <img
                      alt="dassana-orange"
                      height={32}
                      src="dassana-orange.png"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        className="ant-pagination ant-table-pagination ant-table-pagination-right"
        style={Object {}}
        unselectable="unselectable"
      >
        <li
          aria-disabled={true}
          className="ant-pagination-prev ant-pagination-disabled"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={null}
          title="Previous Page"
        >
          <button
            className="ant-pagination-item-link"
            disabled={true}
            tabIndex={-1}
            type="button"
          >
            <span
              aria-label="left"
              className="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex="0"
          title={1}
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled={true}
          className="ant-pagination-next ant-pagination-disabled"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={null}
          title="Next Page"
        >
          <button
            className="ant-pagination-item-link"
            disabled={true}
            tabIndex={-1}
            type="button"
          >
            <span
              aria-label="right"
              className="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Colored 1`] = `
<span
  className="ant-tag ant-tag-has-color"
  style={
    Object {
      "backgroundColor": "#108ee9",
    }
  }
>
  Colored
</span>
`;

exports[`Storyshots Tag Colored Preset 1`] = `
<span
  className="ant-tag ant-tag-blue"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Blue
</span>
`;

exports[`Storyshots Tag Default 1`] = `
<span
  className="ant-tag"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Default
</span>
`;

exports[`Storyshots Toggle Checked Disabled 1`] = `
<button
  aria-checked={true}
  className="ant-switch ant-switch-checked ant-switch-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Checked Small 1`] = `
<button
  aria-checked={true}
  className="ant-switch ant-switch-small ant-switch-checked"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Default 1`] = `
<button
  aria-checked={false}
  className="ant-switch"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Disabled 1`] = `
<button
  aria-checked={false}
  className="ant-switch ant-switch-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;
